# evalbench

./: AUDIT.md  CHANGELOG.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  NOTE  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
demos/01-basic/: SCENARIO.md  support_suite.json
demos/02-deep/evalbench/: README.md  baseline_suite.json  candidate_suite.json
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
evalbench/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_connect.py  test_evalbench_deep.py  test_hardening.py  test_smoke.py
